use FFM API to call SetConsoleOutputCP(65001) directly on Windows